feat: added listGenres endpoint
